--- a/style.css
+++ b/style.css
@@ -1,3 +1,38 @@
-h1{
-    color: blue;
+body{
+    margin: 0px;
+    background-color: rgb(37, 36, 36);
+    font-family :Verdana, Geneva, Tahoma, sans-serif
+}
+nav.nav{
+    background-color: rgb(33, 31, 31);
+    height: 50px;
+}
+
+nav.nav div.links{
+    display: inline-block;
+    margin-left: 30px;
+}
+
+nav.nav a{
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 50px;
+}
+
+nav.nav a.active{
+    color: #FFD700;
+}
+
+div.main{
+    color: white;
+    width: 80%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 5%;
+}
+
+div.main-content{
+    font-size: 40px;
 }
