--- a/style.css
+++ b/style.css
@@ -64,3 +64,7 @@ div.main-content div.line-right{
 div.main-content div.line-left{
     animation: 3s ease-out 0s 1 slideInFromLeft;
 }
+
+@media all and (max-width:800px){
+  
+}
