--- a/style.css
+++ b/style.css
@@ -44,15 +44,26 @@ div.main{
     100% {
       transform: translateX(0);
     }
-  }
-  @keyframes slideInFromRight {
+}
+@keyframes slideInFromRight {
     0% {
       transform: translateX(100%);
     }
     100% {
       transform: translateX(0);
     }
+}
+
+@keyframes slideFadeInFromRight {
+  0% {
+    transform: translateX(100%);
+    opacity: 0%;
   }
+  100% {
+    transform: translateX(0%);
+    opacity: 100%;
+  }
+}
 div.main-content{
     font-size: 40px;
 }
@@ -65,6 +76,70 @@ div.main-content div.line-left{
     animation: 3s ease-out 0s 1 slideInFromLeft;
 }
 
+.right-animation{
+  animation: 1.5s ease-out 0s 1 slideFadeInFromRight;
+}
+
+.image{
+  float: right;
+  width: 600px;
+  height: 600px;
+}
+
+/* left */
+div.left{
+  width: 50%;
+  display: inline-block;
+  float: left;
+}
+/* right */
+div.right{
+  width: 50%;
+  display: inline-block;
+}
+
+.content-top{
+  font-size: 20px;
+}
+
+div.content-header{
+  display: inline-block;
+  width: 100%;
+  cursor: pointer;
+}
+div.content-header:hover{
+  color: gold;
+}
+
 @media all and (max-width:800px){
+
+  @keyframes slideFadeInFromRight {
+    0% {
+      transform: translateY(100%);
+      opacity: 0%;
+    }
+    100% {
+      transform: translateY(0%);
+      opacity: 100%;
+    }
+  }
+
+  div.main-content{
+    font-size: 35px;
+  }
+
+  div.left{
+    display: block;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  div.right{
+      display: block;
+      width: 100%;
+  }
+  .image{
+      width: 400px;
+      height: 400px;
+  }
   
 }
