--- a/style.css
+++ b/style.css
@@ -45,9 +45,9 @@ nav.nav a:hover{
 
 div.main{
     color: white;
-    width: 90%;
-    margin-left: 5%;
-    margin-right: 5%;
+    width: 75%;
+    margin-left: 12.5%;
+    margin-right: 12.5%;
     margin-top: 5%;
 }
 
@@ -113,7 +113,8 @@ div.right{
 }
 
 .content-top{
-  font-size: 20px;
+  font-size: 18px;
+  padding-right: 20px;
 }
 
 div.content-header{
