--- a/skillsStyle.css
+++ b/skillsStyle.css
@@ -9,6 +9,8 @@ div.main-header{
     font-size: 30px;
     font-weight: 600;
     text-decoration: underline;
+    text-transform: capitalize;
+    font-size: 23px;
 }
 div.content div.item{
     width: 50%;
