--- a/skillsStyle.css
+++ b/skillsStyle.css
@@ -55,6 +55,7 @@ div.content div.item div.header{
 
 .project-links{
     text-decoration: none;
+    font-size: 13px;
     /* text-transform: uppercase; */
     color: gold;
 }
@@ -82,6 +83,8 @@ div.content div.item div.header{
     }
     .content-top{
         font-size: 14px;
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
     div.main-header{
         font-size: 20px;
@@ -90,8 +93,8 @@ div.content div.item div.header{
         font-size: 25px;
     }
     .image{
-        width: 100px;
-        height: 100px;
-        display: none;
+        width: 180px;
+        height: 180px;
+        /* display: none; */
     }
 }
