--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ div.main-content{
     font-size: 40px;
     width: 100%;
     /* padding-bottom: 300px; */
-    padding-bottom: 100px;
+    /* padding-bottom: 100px; */
 }
 
 div.main-content div.line-right{
@@ -261,6 +261,9 @@ a.contact-link:hover{
       width: 350px;
       height: 350px;
   }
+  div.main{
+    margin-bottom: 0%;
+  }
   div.main-header{
     font-size: 20px;
   }
@@ -271,8 +274,8 @@ a.contact-link:hover{
     font-size: 25px;
   }
   div.main-content{
-    padding-bottom: 50px;
-    padding-top: 0px;
+    padding-bottom: 25px;
+    padding-top: 25px;
   }
   img.my-image{
     width: 50%;
