--- a/style.css
+++ b/style.css
@@ -290,11 +290,12 @@ a.contact-link:hover{
     padding-top: 25px;
   }
   img.my-image{
-    width: 50%;
-    border-radius: 125px;
+    width: 80%;
+    border-radius: 100%;
     filter: grayscale(100%);
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 7.5%;
   }
   
 }
